# SynthEngine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.bat  build.sh
app/: CMakeLists.txt
app/daemon/: main.c
app/standalone/: main.c
examples/: CMakeLists.txt
include/DC/: daemon.h  fmt.h  player.h  result.h  standalone.h  stream_info.h
include/DeepCore/: daemon.h
include/SE/: daemon.h  fmt.h  player.h  result.h  stream_info.h
scripts/cmake/: compile_tools.cmake  remotes.cmake  setter.cmake
src/: daemon.c  fmt.c  main.c  player.c  result.c  standalone.c  stream_info.c
src/internal/: endint.c  fileio.c  fio.c  player.c  serializer.c
src/internal/include/: endint.h  fileio.h  fio.h  player.h  serializer.h
tests/: CMakeLists.txt
tests/include/: test_errors.h
tests/src/: test_errors.c  test_main.c
